# cln-plugin-scaffold

./: .gitignore  Cargo.toml  README.md  btc-cli  cln-cli  shell.nix  start-cln-regtest  start-plugin  stop-plugin
cln-plugin-hello/: Cargo.toml
cln-plugin-hello/src/: main.rs
nix/: pkgs.nix
nix/cln/: default.nix  overlay.nix
